[package]
name = "pathfinder-loadshedder"
description = "URL latency-based load-shedding hyper/tower middleware"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/houski/pathfinder-loadshedder"
keywords = ["hyper", "middleware", "load"]
categories = ["network-programming"]

[dependencies]
axum = { version = "0.7.5" }
hyper = "1.2"
lazy_static = "1.4.0"
rand = "0.8"
tokio = { version = "1", default-features = false, features = ["sync"] }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
plotters = "0.3.6"
dialoguer = "0.11"
futures = "0.3"
http-body-util = "0.1.0"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
metrics = "0.20"
metrics-exporter-prometheus = "0.13"
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[features]
default = []
