[package]
name = "pathfinder-loadshedder"
description = "URL path-based concurrecy load-shedding hyper/tower middleware"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/houski/pathfinder-loadshedder"
keywords = ["hyper", "middleware", "load"]
categories = ["network-programming"]

[dependencies]
axum = { version = "0.7.5" }
hyper = "1.2"
lazy_static = "1.4.0"
tokio = { version = "1", features=["rt-multi-thread"] }
tower = { version = "0.4" }

[dev-dependencies]
rand = "0.8"
reqwest = "0.12.4"

[features]
default = []
